--- a/vSLAM/ch6/g2o_curve_fitting/CMakeLists.txt
+++ b/vSLAM/ch6/g2o_curve_fitting/CMakeLists.txt
@@ -1,20 +1,25 @@
+#版本限制
 cmake_minimum_required( VERSION 2.8 )
+#工程名
 project( g2o_curve_fitting )
 
 set( CMAKE_BUILD_TYPE "Release" )
 set( CMAKE_CXX_FLAGS "-std=c++11 -O3" )
 
-# 添加cmake模块以使用ceres库
+# 添加cmake模块以使用G2O库
 list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )
 
 # 寻找G2O
 find_package( G2O REQUIRED )
-include_directories( 
-    ${G2O_INCLUDE_DIRS}
-    "/usr/include/eigen3"
-)
+IF(G2O_FOUND)
+    include_directories(${G2O_INCLUDE_DIR})
+    message("G2O lib is found:"${G2O_INCLUDE_DIR})
+ENDIF(G2O_FOUND)
 
-# OpenCV
+# 添加Eigen头文件
+include_directories( "/usr/include/eigen3" )
+
+# OpenCV 库文件
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_DIRS} )
 
@@ -24,3 +29,16 @@ target_link_libraries( curve_fitting
     ${OpenCV_LIBS}
     g2o_core g2o_stuff
 )
+
+find_package(CSparse REQUIRED)
+
+include_directories(${CSPARSE_INCLUDE_DIR})
+
+SET(G2O_LIBS g2o_cli g2o_ext_freeglut_minimal g2o_simulator g2o_solver_slam2d_linear g2o_types_icp g2o_types_slam2d g2o_core g2o_interface g2o_solver_csparse g2o_solver_structure_only g2o_types_sba g2o_types_slam3d g2o_csparse_extension g2o_opengl_helper g2o_solver_dense g2o_stuff g2o_types_sclam2d g2o_parser g2o_solver_pcg g2o_types_data g2o_types_sim3 cxsparse )
+add_executable(g2o_test g2o_test.cpp)
+# 与G2O
+target_link_libraries( g2o_test
+   #G2O_LIBS 
+   g2o_core g2o_stuff g2o_csparse_extension g2o_solver_csparse cxsparse g2o_types_slam3d
+)
+
