--- a/vSLAM/ch9project/0.1/src/CMakeLists.txt
+++ b/vSLAM/ch9project/0.1/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+# 创建共享库
 add_library( myslam SHARED
     frame.cpp
     mappoint.cpp
@@ -5,7 +6,7 @@ add_library( myslam SHARED
     camera.cpp
     config.cpp
 )
-
+# 连接 依赖库 
 target_link_libraries( myslam
     ${THIRD_PARTY_LIBS}
 )
