--- a/darknect/caffe/caffe_src_change/Makefile.config
+++ b/darknect/caffe/caffe_src_change/Makefile.config
@@ -34,17 +34,15 @@ CUDA_DIR := /usr/local/cuda
 # For CUDA < 6.0, comment the *_50 through *_61 lines for compatibility.
 # For CUDA < 8.0, comment the *_60 and *_61 lines for compatibility.
 # For CUDA >= 9.0, comment the *_20 and *_21 lines for compatibility.
-CUDA_ARCH := 
-                #-gencode arch=compute_20,code=sm_20 \
-                #-gencode arch=compute_20,code=sm_21
-		-gencode arch=compute_30,code=sm_30 \
-		-gencode arch=compute_35,code=sm_35 \
-		-gencode arch=compute_50,code=sm_50 \
-		-gencode arch=compute_52,code=sm_52 \
-		-gencode arch=compute_60,code=sm_60 \
-		-gencode arch=compute_61,code=sm_61 \
-		-gencode arch=compute_61,code=compute_61
-
+CUDA_ARCH := -gencode=arch=compute_20,code=sm_20 \
+             -gencode=arch=compute_20,code=sm_21 \
+             -gencode=arch=compute_30,code=sm_30 \
+             -gencode=arch=compute_35,code=sm_35 \
+             -gencode=arch=compute_50,code=sm_50 \
+             -gencode=arch=compute_52,code=sm_52 \
+             -gencode=arch=compute_60,code=sm_60 \
+             -gencode=arch=compute_61,code=sm_61 \
+             -gencode=arch=compute_61,code=compute_61
 
 # BLAS choice:
 # atlas for ATLAS (default)
