Update and rename my_rgbd_ty _api.yaml to my_rgbd_ty_api.yaml

--- a/stereo/RGBD/orb_slam2_rgbd/my_rgbd_ty_api.yaml
+++ b/stereo/RGBD/orb_slam2_rgbd/my_rgbd_ty_api.yaml
@@ -4,7 +4,7 @@
 # Camera Parameters. Adjust them!
 #--------------------------------------------------------------------------------------------
 
-# Camera calibration and distortion parameters (OpenCV) 
+# Camera calibration and distortion parameters (OpenCV)  内参 + 畸变参数
 Camera.fx: 558.957
 Camera.fy: 559.094
 Camera.cx: 306.279
